fix: :white_check_mark: fix test